# django_adv

./: .gitignore  Makefile  README.md  pyproject.toml
adv-tutorials/: README.rst  db.sqlite3
adv-tutorials/project/: settings.py
